# TestTraits

./: .clang-format  CMakeLists.txt
TestTraits/: CMakeLists.txt
TestTraits/include/TestTraits/: fixture_traits_factory.h  test_fixture_factory.h  traits_fixture_factory.h  traits_group_factory.h  traits_utils.h
example/: 1_base_trait_test.cpp  2_multiple_traits_test.cpp  3_using_traits_member_fields.cpp  CMakeLists.txt  main.cpp
